# MorgageCalcAPI

./: .gitlab-ci.yml  Dockerfile  Jenkinsfile  app-deployment.yml  app-service.yml  docker-compose.yml  pyproject.toml
back/: Dockerfile
back/calculator/: filters.py  utils.py
back/config/: routers.py  settings.py
calculator/: models.py  tests.py  views.py
calculator/migrations/: 0001_initial.py
config/: settings.py
deploy/: app-deployment.yml
project/calculator/: serializers.py
